fix button text to white in dark mode

--- a/styles/Sponsors.module.css
+++ b/styles/Sponsors.module.css
@@ -129,7 +129,7 @@ a.subheader {
     color: white;
   }
 
-  #buttonsContainer button {
+  #sponsorButtonsContainer button {
     color: white;
   }
 
